tests/rosetta/out/Zig/averages-median-1.error
zig build: exit status 1
/tmp/averages-median-1.zig:10:9: error: local variable is never mutated
/tmp/averages-median-1.zig:10:9: note: consider using 'const'
/tmp/averages-median-1.zig:28:9: error: local variable is never mutated
/tmp/averages-median-1.zig:28:9: note: consider using 'const'
